# nightjar

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  JUNE_better.md  JUNE_context.md  KNOWN_ISSUES.md  LAB_IMPLEMENTATION_PLAN.md  Lab.md  NIGHTJAR_LICENSE_AND_ATTRIBUTION.md  README.md  WINDOWS_SETUP.md  audit1.md  package-lock.json
browser-use-mcp/: README.md  requirements.txt  server.py  test_model_resolution.py  test_run_browser_task.py
diffusion-mcp/: requirements.txt
phase-cad/: README.md  cad_mcp_server.py  hero_planetary_gearset.py  materials.py  pyproject.toml  setup.sh  smoke_test.py  step_to_glb.py
phase-cad/probes/: probe_full_cad_loop.py  probe_step_glb_hierarchy.py
phase1-engine/: .gitignore  PHASE1.5_REPORT.md  PHASE1_REPORT.md  hw-detect.mjs  inference-proxy.mjs  nightjar-run.mjs  opencode.json  verify-plugins.ts  verify-watchdog.sh
phase2-mcp/: NOTICE  PHASE2_REPORT.md  mcp_server.py  recall.py  requirements.txt  sidechannel.py  test_vision.py  wake_daemon.py
phase2-odysseus/: PHASE2B_REPORT.md  requirements.txt  seed_image_endpoint.py  test_image_gen.py  test_image_gen_openrouter.py
phase3-ui/: PHASE3_REPORT.md  PHASE4_REPORT.md  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.mjs  test-attachments.ts  test-byok-insecure.ts  test-capabilities.ts  test-integration.ts  (+10 more)
telegram-scheduler/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
telegram-scheduler/app/: __init__.py  config.py  core.py  db.py  llm.py  main.py  nl_intent.py  scheduler.py  transport.py  usage.py
telegram-scheduler/deploy/: nightjar-telegram-scheduler.service
telegram-scheduler/tests/: test_api.py  test_config.py  test_core.py  test_llm_mock.py  test_nl_intent_sync.py  test_ratelimit.py  test_scheduler.py  test_startup_safety.py  test_transport.py  test_usage.py
(+178 files in other folders)
